# swagger_server/controllers/default_controller.py
@@ -54,3 +54,17 @@ def get_student_by_id(student_id, subject=None):  # noqa: E501
         return res
     return 'Not Found', 404
 
+def get_student_by_last_name(last_name):  # noqa: E501
+    """Find student by last name
+
+    Returns a single student # noqa: E501
+
+    :param last_name: The desired student&#39;s surname
+    :type last_name: str
+
+    :rtype: Student
+    """
+    res = student_service.get_student_by_last_name(last_name)
+    if res:
+        return res
+    return 'Not Found', 404
